# GDEM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: DEM.hpp  Type.hpp  Utility.hpp
include/GDEM/: DEM.hpp  Type.hpp  Utility.hpp
src/: DEM.cpp  Type.cpp  Utility.cpp
