cmake_minimum_required(VERSION 3.28)
project(GDEM LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

find_package(GDAL REQUIRED)

set(LIBGDEM_INCLUDE_DIRECTORIES
    "${CMAKE_CURRENT_SOURCE_DIR}/include/"
    ${GDAL_INCLUDE_DIRS}
    PARENT_SCOPE
)

add_library(${PROJECT_NAME} INTERFACE)
target_include_directories(${PROJECT_NAME} INTERFACE ${LIBGDEM_INCLUDE_DIRECTORY})
target_link_libraries(${PROJECT_NAME} INTERFACE GDAL::GDAL)
